# kuso-subdomain-adder

./: .compose-cd  .dockerignore  .env.develop  .env.production  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  SECURITY.md  build.rs  deploy.sh  docker-compose.yml  kuso-subdomain-adder-update.service  kuso-subdomain-adder-update.timer  kuso-subdomain-adder.service  renovate.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: actionlint.yml  build-image.yml  check-deps.yml  ci.yml  code-coverage.yml  labeler.yml  rustsec-scan.yml  trivy-scan.yml  validate-compose.yml
kubernetes/: kuso-subdomain-adder-claim0-persistentvolumeclaim.yaml  kuso-subdomain-adder-claim1-persistentvolumeclaim.yaml  kuso-subdomain-adder-deployment.yaml  kuso-subdomain-adder-service.yaml  tunnel-claim0-persistentvolumeclaim.yaml  tunnel-deployment.yaml
playwright/: package-lock.json  package.json
playwright/tests/: hoge.spec.ts
src/: api.rs  config.rs  dns.rs  main.rs  subdomain.rs
static/: index.html
template/: index.html  result.html
