[package]
name = "kuso-subdomain-adder"
version = "0.4.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"
build = "build.rs"

license = "MIT"

readme = "README.md"
description = "A super-easy kuso subdomain utility for telekasu using kuso-domains-redirector and Cloudflare API"
repository = "https://github.com/sksat/kuso-subdomain-adder"

[profile.dev]
# speed up build
debug = 0

[profile.release]
incremental = true
debug = 0

[build-dependencies]
vergen = { version = "7.5.1", default-features = false, features = ["build", "cargo", "git", "rustc"] }
anyhow = "1.0.69"

[dependencies]
actix-web = "4.2.1"
async-trait = "0.1.66"
bytes = "1.3.0"
clap = "3.2.23"
cloudflare = "0.10.1"
domain = { version = "0.6.1", features = ["master"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
punycode = "0.4.1"
serde = "1.0.152"
serde_derive = "1.0.152"
tera = "1.17.1"
toml = "0.5.10"
